--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   .good{color:var(--good)} .bad{color:var(--bad)} .warn{color:var(--warn)}
   .bar{height:8px;background:#0a1a38;border:1px solid #1f2b45;border-radius:999px;overflow:hidden}
   .bar>div{height:100%;width:0;background:#2563eb;transition:width .2s}
-  .hint{font-size:12px;color:var(--muted)}
+  .hint{font-size:12px;color:#9ca3af}
 </style>
 </head>
 <body>
 <header>
   <h1>ミームコイン自動スクリーニング（ETH）— 厳密モード＋カレンダー期間＋Googleトレンド相関</h1>
 
-  <!-- ---- 基本パラメータ ---- -->
+  <!-- 基本パラメータ -->
   <div class="row">
     <div class="ctl"><label>days（急騰検出の直近日数）</label><input id="days" type="number" value="14" min="2" max="60"></div>
     <div class="ctl"><label>mult（ピーク/直前minの倍率）</label><input id="mult" type="number" value="3" min="1.001" step="0.001"></div>
@@ -52,13 +52,14 @@
     <div class="ctl"><label>表示</label><div><input id="showAll" type="checkbox" checked> <span class="pill">全件表示（しきい値未達も出す）</span></div></div>
   </div>
 
-  <!-- ---- 期間 & CORS / Trends API ---- -->
+  <!-- 期間 & CORS / Trends -->
   <div class="row" style="margin-top:8px">
     <div class="ctl"><label>抽出期間（開始, カレンダー）</label><input id="dateStart" type="date"></div>
     <div class="ctl"><label>抽出期間（終了, カレンダー）</label><input id="dateEnd" type="date"></div>
-    <div class="ctl" style="min-width:260px"><label>（任意）CORS プロキシ（Ethplorer/Gecko 用）</label><input id="cors" placeholder="https://your-worker.workers.dev/?url="></div>
-    <!-- ★ 追加：TrendsはWorkers /series を第一選択 -->
-    <div class="ctl" style="min-width:320px"><label>（推奨）Trends API（Workers /series のURL）</label><input id="trApi" placeholder="https://<your>.workers.dev/series"></div>
+    <!-- ★ 既定をセット -->
+    <div class="ctl" style="min-width:260px"><label>（任意）CORS プロキシ（Ethplorer/Gecko 用）</label><input id="cors" value="https://cors.isomorphic-git.org/"></div>
+    <!-- ★ Worker/Proxy 兼用欄（/series ならWorker、他はTrends直叩き用のプロキシBaseとして使用） -->
+    <div class="ctl" style="min-width:320px"><label>（推奨）Trends API（/series または プロキシBase）</label><input id="trApi" value="https://cors.isomorphic-git.org/"></div>
     <div class="ctl" style="min-width:220px"><label>（任意）Ethplorer API key</label><input id="ethKey" placeholder="未入力なら freekey を使用"></div>
     <div class="ctl">
       <label>&nbsp;</label>
@@ -78,7 +79,7 @@
     </div>
   </details>
 
-  <!-- ---- Googleトレンド相関 ---- -->
+  <!-- Googleトレンド相関 -->
   <div style="margin-top:14px"></div>
   <div class="row">
     <div class="ctl"><label>相関：地域（geo）</label>
@@ -111,17 +112,14 @@
 
 <main>
   <div id="params" class="log" style="margin-bottom:10px">待機中：上のパラメータをセットして「スキャン実行」を押してください。</div>
-
   <div class="bar"><div id="pbar"></div></div>
   <div style="height:8px"></div>
   <div class="pill" id="progress">idle</div>
-
   <div style="height:10px"></div>
   <div class="log" id="notes"></div>
   <div style="height:14px"></div>
   <div id="wrapTable"></div>
-
-  <footer>© 2025 — Ethereum only｜データ: GeckoTerminal（日足OHLCV） / DexScreener（トレンド補助） / Ethplorer（TopHolders） / Google Trends（/series 経由推奨）</footer>
+  <footer>© 2025 — Ethereum only｜データ: GeckoTerminal / DexScreener / Ethplorer / Google Trends</footer>
 </main>
 
 <script>
@@ -169,10 +167,9 @@ function datePrefToUnix(){let s=dateToStartUnix(by('dateStart').value);let e=dat
 let lastEth=0,lastGecko=0,geckoPenalty=0;
 const ETHPLORER_MIN_INTERVAL = 4000;
 let GECKO_MIN_INTERVAL=700;
-
-/* ★ Trends 呼び出しのスロットリング */
+/* ★ Trends の全体スロットリング */
 let lastTr=0;
-const TRENDS_MIN_INTERVAL = 1200;
+const TRENDS_MIN_INTERVAL=1200;
 
 /* ============ トレンド種取得 ============ */
 function parseGeckoTokenId(id){ if(!id)return ''; const parts=id.split('_'); return parts[parts.length-1]?.toLowerCase()||''; }
@@ -226,18 +223,16 @@ async function getDailyOHLCV_eth_pool(addr,{limit=120}={}){
   }
 }
 
-/* ============ スパイク検出（可変ウィンドウ） ============ */
+/* ============ スパイク検出 ============ */
 function bestSpikeFlexible(ohlc, windowDays, startTs, endTs){
   if(!ohlc?.length) return null;
   const sorted=[...ohlc].sort((a,b)=>a.ts-b.ts);
   const N=sorted.length, DAY=86400;
   let best=null, bestMult=0;
-
   for(let i=0;i<N;i++){
     const p=sorted[i];
     if(startTs && p.ts<startTs) continue;
     if(endTs && p.ts>endTs) continue;
-
     let j=i-1; if(j<0) continue;
     const lookbackTs=p.ts-windowDays*DAY;
     let minPrice=Infinity, minCandle=null;
@@ -249,7 +244,6 @@ function bestSpikeFlexible(ohlc, windowDays, startTs, endTs){
     if(!minCandle) continue;
     const peakPrice=Math.max(p.h ?? p.c, p.c ?? p.h);
     if(!(peakPrice>0) || !(minPrice>0)) continue;
-
     const mult=peakPrice/minPrice;
     if(mult>bestMult){ bestMult=mult; best={ peak_ts:p.ts, pre_min_ts:minCandle.ts, multiple_14d:mult }; }
   }
@@ -263,36 +257,28 @@ const LOCKER_HINTS=['unicrypt','team','pink','gempad','dxsale','mudra','safelock
 async function getTopHolders_lp(tokenAddr,{apiKey='freekey'}={}) {
   if (!tokenAddr) return [];
   const baseUrl = `https://api.ethplorer.io/getTopTokenHolders/${tokenAddr}?apiKey=${encodeURIComponent(apiKey)}&limit=50`;
-
   let tries = 0, lastErr = null;
   while (tries < 8) {
     tries++;
     const wait = Math.max(0, lastEth + ETHPLORER_MIN_INTERVAL - Date.now());
     if (wait > 0) await sleep(wait + jitter(80, 280));
     lastEth = Date.now();
-
     try {
       const json = await getJsonSmart(baseUrl, { label: `TopHolders ${tokenAddr.slice(0,6)}…`, timeout: 14000 });
-      const holders = json?.holders || [];
-      return holders;
+      return json?.holders || [];
     } catch (e) {
       const msg = String(e.message || e);
-      if (msg.includes('429')) {
-        await sleep(2200 + tries * 600);
-      } else if (msg.includes('timeout') || msg.includes('abort') || msg.includes('Load failed') || msg.includes('Failed to fetch') || msg.includes('NetworkError') || msg.includes('CORS')) {
-        await sleep(1200 + tries * 400);
-      } else if (msg.includes('400') || msg.includes('403') || msg.includes('406') || msg.includes('5')) {
-        await sleep(1000 + tries * 300);
-      }
-      lastErr = e;
-      log(`TopHolders再試行 ${tries}/8: ${msg}`, true);
+      if (msg.includes('429')) await sleep(2200 + tries * 600);
+      else if (/(timeout|abort|Load failed|Failed to fetch|NetworkError|CORS)/i.test(msg)) await sleep(1200 + tries * 400);
+      else if (/(400|403|406|5\d\d)/.test(msg)) await sleep(1000 + tries * 300);
+      lastErr = e; log(`TopHolders再試行 ${tries}/8: ${msg}`, true);
     }
   }
   log('TopHolders: retries exhausted（LP%は unknown として続行）', true);
   return [];
 }
 function estimateLP(hs=[]){
-  if(!hs.length) return {lp_pct_est:null,lp_type:'unknown',locker_name:'',burn_proof_url:'',locker_proof_url:''};
+  if(!hs.length) return {lp_pct_est:null,lp_type:'unknown',locker_name:''};
   let burn=0,lock=0,locker='';
   for(const h of hs){
     const addr=(h?.address||'').toLowerCase(); const name=(h?.owner?.name||h?.address||'').toLowerCase(); const share=+h?.share||0;
@@ -304,97 +290,104 @@ function estimateLP(hs=[]){
 }
 
 /* ============ Google Trends ============ */
-// ★ まずは Workers /series を使う（入力 trApi）
 function stripXSSI(s){ return typeof s==='string' && s.startsWith(")]}',") ? s.slice(5) : s; }
 
+/* ★ Trends: Worker(/series)優先 → 失敗時は“trApi/cors/汎用”の順で直叩きフォールバック */
 async function getTrendsSeries({kw,geo,startTs,endTs,hl='ja',tz=0}){
-  // スロットリング
-  const wait=Math.max(0,lastTr+TRENDS_MIN_INTERVAL-Date.now());
-  if(wait>0) await sleep(wait + jitter(80,260));
+  const nowWait=Math.max(0,lastTr+TRENDS_MIN_INTERVAL-Date.now());
+  if(nowWait>0) await sleep(nowWait + jitter(80,260));
   lastTr=Date.now();
 
-  const api = (by('trApi').value||'').trim();
-  if (api) {
-    // Workers /series にそのまま委譲
-    const u = new URL(api);
-    if (!u.pathname.endsWith('/series')) u.pathname = (u.pathname.replace(/\/+$/,'') || '') + '/series'; // 保険
-    u.searchParams.set('kw', kw);
-    u.searchParams.set('geo', geo || '');
-    u.searchParams.set('hl', hl);
-    u.searchParams.set('start', new Date(startTs*1000).toISOString().slice(0,10));
-    u.searchParams.set('end', new Date((endTs-1)*1000).toISOString().slice(0,10));
-    const r = await fetch(u.toString(), {mode:'cors'});
-    if (!r.ok) throw new Error(`Series(worker) HTTP ${r.status}`);
-    const j = await r.json();
-    const pts = j?.points || [];
-    return pts.map(p=>({ts: Math.floor(p.ts/1000), v: +p.value||0}));
+  const trCfg=(by('trApi').value||'').trim();
+
+  // ---- 1) Worker /series（もしくは /timeseries）を試す
+  if (/\/(series|timeseries)\b/.test(trCfg)) {
+    try{
+      const base = new URL(trCfg);
+      // 正規化
+      if (!/\/(series|timeseries)\b/.test(base.pathname)) base.pathname = base.pathname.replace(/\/+$/,'') + '/series';
+      // /series 形式
+      const u = new URL(base.toString());
+      u.searchParams.set('kw', kw);
+      u.searchParams.set('geo', geo || '');
+      u.searchParams.set('hl', hl);
+      u.searchParams.set('start', new Date(startTs*1000).toISOString().slice(0,10));
+      u.searchParams.set('end', new Date((endTs-1)*1000).toISOString().slice(0,10));
+      const r = await fetch(u.toString(), {mode:'cors'});
+      if(!r.ok) throw new Error(`Series(worker) HTTP ${r.status}`);
+      const j = await r.json();
+
+      // 受け取り互換（3通り）
+      if (Array.isArray(j?.points)) {
+        return j.points.map(p=>({ts: Math.floor(p.ts/1000), v:+p.value||0}));
+      }
+      if (j?.data?.default?.timelineData) {
+        return j.data.default.timelineData.map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
+      }
+      if (j?.ok && j?.data?.default?.timelineData) {
+        return j.data.default.timelineData.map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
+      }
+      throw new Error('Series(worker) unknown payload');
+    }catch(e){
+      log(`Trends(workers) 失敗 → フォールバック: ${e.message||e}`,true);
+    }
   }
 
-  // ★ フォールバック：直接叩く（textで受けて XSSI 除去 → JSON）
+  // ---- 2) 直叩き（text→XSSI除去→JSON）: プロキシは trApi を最優先に使用
   const time = (()=> {
     const s=new Date(startTs*1000), e=new Date((endTs-1)*1000);
-    const s9=`${s.getUTCFullYear()}-${String(s.getUTCMonth()+1).padStart(2,'0')}-${String(s.getUTCDate()).padStart(2,'0')}`;
-    const e9=`${e.getUTCFullYear()}-${String(e.getUTCMonth()+1).padStart(2,'0')}-${String(e.getUTCDate()).padStart(2,'0')}`;
-    return `${s9} ${e9}`;
+    const ymd = d=>`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`;
+    return `${ymd(s)} ${ymd(e)}`;
   })();
 
   const exploreReq = { comparisonItem:[{keyword:kw, geo:geo||'', time}], category:0, property:'' };
   const base = 'https://trends.google.com/trends/api';
   const expURL = `${base}/explore?hl=${encodeURIComponent(hl)}&tz=${tz}&req=${encodeURIComponent(JSON.stringify(exploreReq))}`;
 
-  const textFetch = async (url,label)=>{
-    // 直接 or 汎用CORSプロキシ（順に試行）
-    const user=by('cors').value.trim();
-    const bases=[user||'', 'https://cors.isomorphic-git.org/', 'https://corsproxy.io/?url=', 'https://api.allorigins.win/raw?url='];
+  const firstProxy = trCfg && !/\/(series|timeseries)\b/.test(trCfg) ? trCfg : ''; // ★ trApiがProxy Baseなら最優先
+  const user=by('cors').value.trim();
+  const proxyBases=[firstProxy, user||'', 'https://cors.isomorphic-git.org/', 'https://corsproxy.io/?url=', 'https://api.allorigins.win/raw?url='].filter(Boolean);
+
+  const fetchTextVia = async (url,label)=>{
     let last;
-    for(const b of bases){
+    for(const b of proxyBases){
       try{
         const u=buildProxiedUrl(b,url);
         log(`GET ${label}: ${u.slice(0,140)}`);
         const r=await fetch(u);
-        const t=await r.text();              // ★ 常に text で取得
-        if (!r.ok) { last=new Error(`HTTP ${r.status}`); continue; }
-        if (/^\s*</.test(t)) { last=new Error('HTML response'); continue; } // ★ HTMLは即NG
+        const t=await r.text();
+        if(!r.ok){ last=new Error(`HTTP ${r.status}`); continue; }
+        if(/^\s*</.test(t)){ last=new Error('HTML response'); continue; }
         return t;
       }catch(e){ last=e; log(`…via ${b||'DIRECT'} failed: ${e.message||e}`,true); }
     }
     throw last||new Error('All proxies failed');
   };
 
-  try{
-    const expTxt = await textFetch(expURL, `Trends explore ${kw}`);
-    const exp = JSON.parse(stripXSSI(expTxt));
-    const widget=(exp.widgets||[]).find(w=>w?.id==='TIMESERIES'||w?.type==='TIMESERIES')||(exp.widgets||[]).find(w=>w?.type==='MULTILINE');
-    if(!widget) throw new Error('TIMESERIES widget not found');
-    const mlURL = `${base}/widgetdata/multiline?hl=${encodeURIComponent(hl)}&tz=${tz}&token=${encodeURIComponent(widget.token)}&req=${encodeURIComponent(JSON.stringify(widget.request))}`;
-    const mlTxt = await textFetch(mlURL, `Trends data ${kw}`);
-    const data = JSON.parse(stripXSSI(mlTxt));
-    const series=((data?.default?.timelineData)||[]).map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
-    return series;
-  }catch(e){
-    throw new Error(`Trends fetch failed: ${e.message||e}`);
-  }
+  const expTxt = await fetchTextVia(expURL, `Trends explore ${kw}`);
+  const exp = JSON.parse(stripXSSI(expTxt));
+  const widget=(exp.widgets||[]).find(w=>w?.id==='TIMESERIES'||w?.type==='TIMESERIES')||(exp.widgets||[]).find(w=>w?.type==='MULTILINE');
+  if(!widget) throw new Error('TIMESERIES widget not found');
+  const mlURL = `${base}/widgetdata/multiline?hl=${encodeURIComponent(hl)}&tz=${tz}&token=${encodeURIComponent(widget.token)}&req=${encodeURIComponent(JSON.stringify(widget.request))}`;
+
+  const mlTxt = await fetchTextVia(mlURL, `Trends data ${kw}`);
+  const data = JSON.parse(stripXSSI(mlTxt));
+  const series=((data?.default?.timelineData)||[]).map(d=>({ts:+d.time, v:+(d.value?.[0]??0)}));
+  return series;
 }
 
 function seriesToMapDaily(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.v); } return m;}
 function ohlcToMapClose(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.c); } return m;}
 
-/* 既存: 数値配列の%リターン */
-function toReturns(vals){const out=[]; for(let i=1;i<vals.length;i++){ const a=vals[i-1], b=vals[i]; if(a>0 && b>0){ out.push((b/a-1)*100); } } return out; }
-/* NaN維持版（日付整列を壊さない） */
+/* リターン系列（NaN維持・日付整列保持） */
 function toReturnsSeries(vals){const out=[]; for(let i=1;i<vals.length;i++){ const a=vals[i-1], b=vals[i]; out.push(Number.isFinite(a)&&Number.isFinite(b)&&a>0&&b>0 ? (b/a-1)*100 : NaN);} return out;}
 
-function alignAndLag(xArr,yArr,lag){ // lag>0: y を未来へ
+function alignAndLag(xArr,yArr,lag){
   const n=Math.min(xArr.length, yArr.length);
   const xs=[], ys=[];
-  if(lag===0){
-    for(let i=0;i<n;i++){ const xi=xArr[i], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi); } }
-  }else if(lag>0){
-    for(let i=lag;i<n;i++){ const xi=xArr[i], yi=yArr[i-lag]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} }
-  }else{
-    const L=-lag;
-    for(let i=L;i<n;i++){ const xi=xArr[i-L], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} }
-  }
+  if(lag===0){ for(let i=0;i<n;i++){ const xi=xArr[i], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi); } } }
+  else if(lag>0){ for(let i=lag;i<n;i++){ const xi=xArr[i], yi=yArr[i-lag]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} } }
+  else{ const L=-lag; for(let i=L;i<n;i++){ const xi=xArr[i-L], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} } }
   return {xs,ys};
 }
 function pearson(xs,ys){
@@ -406,7 +399,7 @@ function pearson(xs,ys){
 }
 
 /* ============ Main ============ */
-let LAST_ROWS=[]; let CANCEL=false; let CACHE_OHLCV=new Map(); // poolAddr -> candles
+let LAST_ROWS=[]; let CANCEL=false; let CACHE_OHLCV=new Map();
 async function run(){
   CANCEL=false; by('cancelBtn').disabled=false;
   by('csvBtn').disabled=true; by('corrBtn').disabled=true; by('wrapTable').innerHTML=''; by('notes').innerHTML='';
@@ -426,7 +419,7 @@ async function run(){
   by('params').textContent=[
     `Params: days=${days}, mult=${mult}, LP>=${lpmin}%, lpRequired=${lpRequired}, showAll=${showAll}`,
     `Period: start=${startTs||'-'} (${startTs?new Date(startTs*1000).toLocaleDateString():''}), end=${endTs||'-'} (${endTs?new Date(endTs*1000).toLocaleDateString():''})`,
-    `Trends API: ${by('trApi').value||'(fallback: direct via proxies)'}`
+    `Trends API: ${(by('trApi').value||'(fallback: proxies)')}`
   ].join('\n');
 
   try{
@@ -476,8 +469,8 @@ async function run(){
         if(lpRequired && !(lpInfo.lp_pct_est!=null && lpInfo.lp_pct_est>=lpmin)){ passes=false; reason.push('lp'); }
       }
 
-      const baseSym = (s.baseSymbol || (s.name||'').split('/')[0] || '').trim();
-      const trendKw = baseSym ? `${baseSym} crypto` : '';
+      const baseSym=(s.baseSymbol || (s.name||'').split('/')[0] || '').trim();
+      const trendKw=baseSym?`${baseSym} crypto`:''; // 既定KW
 
       rows.push({
         token_pool:s.name||'', address:s.poolAddress, token_address:s.tokenAddress||'',
@@ -522,7 +515,6 @@ async function runCorrelation(){
     try{
       const candles=CACHE_OHLCV.get(r.address)||[];
       const priceMap=ohlcToMapClose(candles);
-      // 日付配列（スキャン期間と重なる部分）
       const dates=[]; for(let t=startTs;t<endTs;t+=86400){ const d=new Date(t*1000); dates.push(`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`); }
 
       const trSeries=await getTrendsSeries({kw:r.trend_kw,geo,startTs,endTs,hl:'ja',tz:0});
@@ -530,13 +522,11 @@ async function runCorrelation(){
 
       let px=[], tv=[];
       for(const d of dates){ const p=priceMap.get(d), v=trendMap.get(d); px.push(Number.isFinite(p)?p:NaN); tv.push(Number.isFinite(v)?v:NaN); }
-      // 欠損埋め：前日値を持ち越し
       for(let i=1;i<px.length;i++){ if(!Number.isFinite(px[i])&&Number.isFinite(px[i-1])) px[i]=px[i-1]; }
       for(let i=1;i<tv.length;i++){ if(!Number.isFinite(tv[i])&&Number.isFinite(tv[i-1])) tv[i]=tv[i-1]; }
 
       if(mode==='ret'){ px=toReturnsSeries(px); tv=toReturnsSeries(tv); }
 
-      // ラグ探索
       let bestR=null, bestLag=0, r0=null;
       for(let lag=-L; lag<=L; lag++){
         const {xs,ys}=alignAndLag(px,tv,lag);
@@ -556,8 +546,7 @@ async function runCorrelation(){
     }catch(e){
       log(`Trends取得失敗: ${r.trend_kw}｜${e.message||e}`,true);
     }
-    // ★ 呼び出し間ディレイで 429/403 をさらに回避
-    await sleep(300 + Math.random()*200);
+    await sleep(300 + Math.random()*200); // 追加ディレイ
   }
   render(LAST_ROWS,{strict:by('strict').checked,lpmin:+by('lpmin').value||80,showAll:by('showAll').checked});
   by('progress').textContent='相関計算 完了';
@@ -577,7 +566,7 @@ function render(rows,{strict,lpmin,showAll}){
     const m=+r.multiple_14d_close||0;
     const mcls=m>=3?'good':(m>=2?'warn':'');
     const lpcls=(r.lp_pct_est>=lpmin)?'good':(r.lp_pct_est>=50?'warn':'bad');
-    h+=`<tr class="token" data-symbol="${(r.base_symbol||'').toLowerCase()}">
+    h+=`<tr>
       <td class="num">${i+1}</td>
       <td>${r.token_pool||''}</td>
       <td><a href="${r.dex_url}" target="_blank">${r.address.slice(0,6)}…${r.address.slice(-4)}</a></td>
@@ -589,7 +578,7 @@ function render(rows,{strict,lpmin,showAll}){
       <td>${r.lp_type||''}</td>
       <td>${r.locker_name||''}</td>
       <td>${r.trend_kw||''}</td>
-      <td class="num corr">${r.tr_r_max||''}</td>
+      <td class="num">${r.tr_r_max||''}</td>
       <td class="num">${r.tr_lag_best||''}</td>
       <td class="num">${r.tr_r0||''}</td>
       <td>
